--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,3 +1,12 @@
 back:
   en: back
   fr: retour
+partners:
+  en: 'Supported by '
+  fr: 'Soutenu par '
+upcoming:
+  en: 'Upcoming'
+  fr: 'À venir'
+past:
+  en: 'Past'
+  fr: 'Passés'
