--- a/_config.yml
+++ b/_config.yml
@@ -18,63 +18,47 @@ collections_dir: content
 collections:
   en:
     output: true
-    permalink: /:collection/:title
+    permalink: /:collection/:path
   fr:
     output: true
-    permalink: /:collection/:title
+    permalink: /:collection/:slug
 
 defaults:
 
   - scope:
-      path: "_en/projects/"
-      type: en
-    values:
-      layout: projects
-      permalink: /:collection/projects/:slug
-
-  - scope:
-      path: "_fr/projects/"
-      type: fr
-    values:
-      layout: projects
-      permalink: /:collection/projects/:slug
-
-  - scope:
-      path: "_en/pieces/"
-      type: en
-    values:
-      layout: pieces
-      permalink: /:collection/pieces/:slug
-
-  - scope:
-      path: "_fr/pieces/"
-      type: fr
-    values:
-      layout: pieces
-      permalink: /:collection/pieces/:slug
-
-  - scope:
       path: ""
-      type: fr
     values:
       layout: default
-      lang: "fr"
 
   - scope:
-      path: "_en/"
+      path: "_en/projects"
       type: en
     values:
-      layout: default
-      lang: "en"
+      layout: projects
+      permalink: /:collection/projects/:slug
+
   - scope:
-      path: "_fr/"
+      path: "_fr/projects"
       type: fr
     values:
-      layout: default
-      lang: "fr"
+      layout: projects
+      permalink: /:collection/projects/:slug
+
+  - scope:
+      path: "_en/pieces"
+      type: en
+    values:
+      layout: pieces
+      permalink: /:collection/pieces/:slug
+
+  - scope:
+      path: "_fr/pieces"
+      type: fr
+    values:
+      layout: pieces
+      permalink: /:collection/pieces/:slug
 
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
 
-github: [metadata]
