--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -24,3 +24,13 @@
   maps: https://goo.gl/maps/k5w9Rdxv7mBZvok48
   city: "Toulouse"
   country: "FR"
+
+- what: "A letter to Taipei"
+  when: "2023-07-02"
+  site: https://www.instagram.com/p/CuMQYLrImV1/?utm_source=ig_web_button_share_sheet&igshid=MzRlODBiNWFlZA==
+  name: "Festival Superspective"
+  where: "Chapelle Magnétique"
+  maps: https://goo.gl/maps/V2ZhWZu4fATLzMXq5
+  city: "Lyon"
+  country: "FR"
+
