--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,4 +1,4 @@
-- what: "Cordelia presents Cordelia"
+- what: "ultralove"
   when: "2023-07-14"
   site: https://fb.me/e/6Fm8RmQcX
   name: "Festival 16:30"
@@ -10,7 +10,7 @@
 - what: "ghosts memory holds"
   when: "2023-06-18"
   site: https://www.musikfestspiele-potsdam.de/programm/kalender/programm-details/fahrradkonzert-auf-ins-gruene-26a.html
-  name: "Musikfestspiele Potsdam Sanssouci"
+  name: "Musikfestspiele Potsdam"
   where: "Sanssouci"
   maps: https://goo.gl/maps/CXMyP7vhtxaaLt688
   city: "Potsdam"
