updated ti darò tutto

--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,4 +1,4 @@
-- what: "Cordelia"
+- what: "私の全部をあげるから"
   when: "2023/08/12"
   site: "https://fb.me/e/10ucU2GSi"
   name: "It's more fun to compute"
@@ -12,7 +12,7 @@
   city: "Théâtre Municipal Berthelot de Montreuil"
   country: "FR"
 
-- what: "je, monstre"
+- what: "私の全部をあげるから"
   when: "2023/07/14"
   site: https://fb.me/e/6Fm8RmQcX
   name: "Festival 16:30"
