update grrrnd zero

--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,3 +1,10 @@
+- what: "L"
+  when: "2023/11/05"
+  site: "https://fb.me/e/1oLWAWG8t"
+  name: "écoutes périfériques"
+  city: "Lyon"
+  country: "FR"
+
 - what: "私の全部をあげるから"
   when: "2023/08/12"
   site: "https://fb.me/e/10ucU2GSi"
