--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -5,7 +5,7 @@
   city: "Lyon"
   country: "FR"
 
-- what: "私の全部をあげるから"
+- what: "elle"
   when: "2023/08/12"
   site: "https://fb.me/e/10ucU2GSi"
   name: "It's more fun to compute"
@@ -19,7 +19,7 @@
   city: "Théâtre Municipal Berthelot de Montreuil"
   country: "FR"
 
-- what: "私の全部をあげるから"
+- what: "elle"
   when: "2023/07/14"
   site: https://fb.me/e/6Fm8RmQcX
   name: "Festival 16:30"
