--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,7 +1,7 @@
 - what: "elle"
   when: "2024/03/03"
   site: "https://reformiert-zuerich.ch/17.php"
-  name: "Stilles Zürich: "Stille Flamme" | w/ Silvia Berchtold"
+  name: "Stilles Zürich: Stille Flamme | w/ Silvia Berchtold"
   city: "Zürich"
   country: "CH"
 
