--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,6 +1,6 @@
 - what: "elle"
   when: "2024/03/03"
-  site: "https://reformiert-zuerich.ch/17.php"
+  site: "https://www.stilles-zuerich.ch/event/stille-flamme/"
   name: "Stilles Zürich: Stille Flamme | w/ Silvia Berchtold"
   city: "Zürich"
   country: "CH"
