--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,3 +1,24 @@
+- what: "der Mond im Untergrund"
+  when: "2024/05/14"
+  site: "https://www.haendel-festspiele.de/de/programm/2024/goettingen-haendel-competition/"
+  name: "Internationale Händel-Festspiele Göttingen| ensemble TraNoi"
+  city: "Göttingen"
+  country: "GE"
+
+- what: "psyché"
+  when: "2024/02/17"
+  site: "https://billetterie.cnsmd-lyon.fr/event/251812-danse-ateliers-dhiver-de-la-danse"
+  name: "Atelier d'Hiver"
+  city: "Lyon"
+  country: "FR"
+
+- what: "psyché"
+  when: "2024/02/17"
+  site: "https://billetterie.cnsmd-lyon.fr/event/251812-danse-ateliers-dhiver-de-la-danse"
+  name: "Atelier d'Hiver"
+  city: "Lyon"
+  country: "FR"
+
 - what: "elle"
   when: "2024/03/03"
   site: "https://www.stilles-zuerich.ch/event/stille-flamme/"
