--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,4 +1,11 @@
 - what: "der Mond im Untergrund"
+  when: "2024/07/?"
+  site: "https://www.haendel-festspiele.de/de/programm/2024/goettingen-haendel-competition/"
+  name: "Internationale Händel-Festspiele Göttingen| ensemble TraNoi"
+  city: "Köln"
+  country: "GE"
+
+- what: "der Mond im Untergrund"
   when: "2024/05/14"
   site: "https://www.haendel-festspiele.de/de/programm/2024/goettingen-haendel-competition/"
   name: "Internationale Händel-Festspiele Göttingen| ensemble TraNoi"
