--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,7 +1,7 @@
 - what: "der Mond im Untergrund"
   when: "2024/08/31"
   site: "https://www.koelner-philharmonie.de/en/programm/felx-urban-tra-noi/4309"
-  name: "Köelner-philharmonie, FEL!X URBAN"
+  name: "Köelner-philharmonie | FEL!X URBAN"
   city: "Köln"
   country: "GE"
 
