added date for clermont and hannover

--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,3 +1,17 @@
+- what: "Cordelia: live coding with Csound, the utopian tragedy of crafting a method - workshop & concert"
+  when: "2025/06/14"
+  site: "https://www.neumerz.org/womb"
+  name: "the womb"
+  city: "Hannover"
+  country: "DE"
+
+- what: "La trogne, la foule et les bourgeons, musique de scène"
+  when: "2025/06/14"
+  site: "https://www.calameo.com/universite-clermont-auvergne/read/000887930102fdeac402f"
+  name: "Festival Nuées Ardentes"
+  city: "Clermont-Ferrand"
+  country: "FR"
+  
 - what: "mélanines"
   when: "2025/03/19"
   site: "https://museeduluxembourg.fr/fr/agenda/evenement/tous-leger"
@@ -17,14 +31,14 @@
   site: "https://www.koelner-philharmonie.de/en/programm/felx-urban-tra-noi/4309"
   name: "Köelner-philharmonie | FEL!X URBAN"
   city: "Köln"
-  country: "GE"
+  country: "DE"
 
 - what: "der Mond im Untergrund"
   when: "2024/05/14"
   site: "https://www.haendel-festspiele.de/de/programm/2024/goettingen-haendel-competition/"
   name: "Internationale Händel-Festspiele Göttingen| ensemble TraNoi"
   city: "Göttingen"
-  country: "GE"
+  country: "DE"
 
 - what: "psyché"
   when: "2024/02/17"
